--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "cuti-docs",
   "packageManager": "yarn@4.3.0",
   "devDependencies": {
-    "vitepress": "^1.5.0"
+    "vitepress": "^1.5.0",
+    "vue": "^3.5.12"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
